Added redeem HTML
Added a redeem section above the trailer to make it easer to redeem download codes.

--- a/app/index.html
+++ b/app/index.html
@@ -36,6 +36,11 @@
         <img src="./images/logos/fate_tectonics_logo_anim_large.gif" alt="" class="img-responsive" id="logo">
         </div>
       </section>
+      <section id="redeem">
+          <div class="container">
+            <p class="text-center lead"><a href="http://fatetectonics.com/gameGetter.php">Got a download code? Redeem it here!</a></p>
+          </div>
+          </section>
 
       <section id="trailer">
         <div class="container">
