--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,13 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="header">
-      <h4><a href="#buy">Alpha Release Now Available for Windows and OS X!</a>
+      <h4><a class="buy" href="#buy">Alpha Release Now Available for Windows and OS X!</a>
       <span class="download-platforms">
         <span title="Download for Windows" class="icon icon-windows"></span>
         <span title="Download for Windows" class="icon icon-apple"></span>
       </span>
       </h4>
-      <h4>Come see us at The Rocket 5 Studios booth at PAX Prime 2014 on Level 6, Booth #6903!</h4>
+      <h4>Vote for us on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=303692118">Steam Greenlight!</a></h4>
     </div>
 
     <section id="intro">
@@ -45,11 +45,11 @@
       <section id="trailer">
         <div class="container">
           <h2>Let&#8217;s Get Ready to Crumble!</h2>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-4">
-              <p class="lead text-center">Come visit us at PAX Prime August 28-September 1!</p>
-              <img src="./images/campaigns/pax_map_2014.png" alt="PAX Prime 2014 Expo Hall, Level 6, Booth #6903" class="img-responsive"></div>
-            <div class="col-md-8">
+              <p class="lead text-center">CTA Header</p>
+              <img src="#" alt="" class="img-responsive"></div>
+            <div class="col-md-8"> -->
 
                           <div class="embed-responsive embed-responsive-16by9 trailer">
               <iframe class="embed-responsive-item" width="853" height="480" src="//www.youtube.com/embed/tuC966zyJ_g?rel=0" allowfullscreen></iframe>
@@ -84,29 +84,36 @@
       </section>
       <section id="fates">
         <div class="container">
-          <div class="row">
 
-            <div class="col-md-4 col-sm-12">
+
+
+              <div class="text-center center-block">
               <h3>The Fates</h3>
-
             </div>
-            <div class="col-md-8 col-sm-12">
+
 
               <div class="row">
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Penelope2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Civilization. Robot minions."><h4>Penelope</h4></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Barnacles2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Seas. Hates it when his name is pronounced wrong."><h4>Barnacles</h4></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Hogweed2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Forests. Doesn't get along with Penelope."><h4>Hogweed</h4></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Pestur2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Disease. Nothing makes him happy."><h4>Pestur</h4></div></div>
+                <div class="col-xs-6 col-sm-2">
+                  <div class="fate">
+                    <img height="128" width="128" src="./images/fates/Fate_Penelope2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Civilization. Robot minions."><h4>Penelope</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Barnacles2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Seas. Hates it when his name is pronounced wrong."><h4>Barnacles</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Hogweed2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Forests. Doesn't get along with Penelope."><h4>Hogweed</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Pestur2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Disease. Nothing makes him happy."><h4>Pestur</h4></div>
               </div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Catlas2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Minerals. Ruler of Rocky Terrains."><h4>Catlas</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Demo_Sprite2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Demonstration. Ruler of World Demolitions."><h4>Demo</h4>
+
+              </div>
+
+              </div></div>
               <div class="row fates-row-2">
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Death2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Snow2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Tentacle2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-                <div class="col-xs-6 col-sm-3"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Void2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
+                <div class="col-xs-6 col-sm-2 col-sm-offset-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Death2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Snow2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Tentacle2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Void2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
               </div>
             </div>
           </div>
-        </div>
       </section>
 
 
