Minor updates to site content
* Corrected sentence case on Catlas, Demo's pop-over desicription.
* Changed "What they make of fate" to "What they're saying about Fate Tectonics…"

--- a/app/index.html
+++ b/app/index.html
@@ -100,8 +100,8 @@
                 <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Hogweed2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Forests. Doesn't get along with Penelope."><h4>Hogweed</h4></div></div>
                 <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Pestur2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Disease. Nothing makes him happy."><h4>Pestur</h4></div>
               </div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Catlas2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Minerals. Ruler of Rocky Terrains."><h4>Catlas</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Demo_Sprite2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Demonstration. Ruler of World Demolitions."><h4>Demo</h4>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Catlas2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Minerals. Ruler of rocky terrains."><h4>Catlas</h4></div></div>
+                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Demo_Sprite2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Demonstration. Ruler of world demolitions."><h4>Demo</h4>
 
               </div>
 
@@ -151,7 +151,7 @@
 
       <section id="quotes">
         <div class="container">
-          <h3 id="what_they_make_of_fate">What They Make of Fate…</h3>
+          <h3 id="what_they_make_of_fate">What They're Saying About Fate Tectonics…</h3>
           <div class="row">
             <div class="col-md-7">
               <blockquote>
