Updating for Indie Megaboot; content updates

--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,30 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div class="header">
-      <h4><a class="buy" href="#buy">Alpha Release Now Available for Windows and OS X!</a>
-      <span class="download-platforms">
-        <span title="Download for Windows" class="icon icon-windows"></span>
-        <span title="Download for Windows" class="icon icon-apple"></span>
-      </span>
-      </h4>
-      <h4>Vote for us on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=303692118">Steam Greenlight!</a></h4>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h4><a class="buy" href="#buy">Alpha Release Now Available</a>
+              <span class="download-platforms">
+                <span title="Download for Windows" class="icon icon-windows"></span>
+                <span title="Download for Windows" class="icon icon-apple"></span>
+              </span>
+            </h4>
+          </div>
+          <div class="col-md-4">
+            <div class="row">
+              <div class="col-md-6"><h4 class="pull-right">Visit us<br>March 2-6 at GDC!</h4></div>
+              <div class="col-md-6"><img src="./images/campaigns/gdc_megabooth.png" class="img-responsive" alt=""></div>
+            </div>
+
+          </div>
+          <div class="col-md-4"><h4>Vote for us on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=303692118">Steam Greenlight!</a></h4></div>
+
+        </div>
+      </div>
+
+
     </div>
 
     <section id="intro">
@@ -87,34 +104,70 @@
 
 
 
-              <div class="text-center center-block">
-              <h3>The Fates</h3>
-            </div>
-
-
-              <div class="row">
-                <div class="col-xs-6 col-sm-2">
-                  <div class="fate">
-                    <img height="128" width="128" src="./images/fates/Fate_Penelope2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Civilization. Robot minions."><h4>Penelope</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Barnacles2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Seas. Hates it when his name is pronounced wrong."><h4>Barnacles</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Hogweed2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Forests. Doesn't get along with Penelope."><h4>Hogweed</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Pestur2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Disease. Nothing makes him happy."><h4>Pestur</h4></div>
-              </div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Catlas2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Minerals. Ruler of rocky terrains."><h4>Catlas</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/Fate_Demo_Sprite2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Demonstration. Ruler of world demolitions."><h4>Demo</h4>
-
-              </div>
-
-              </div></div>
-              <div class="row fates-row-2">
-                <div class="col-xs-6 col-sm-2 col-sm-offset-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Death2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Snow2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Tentacle2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-                <div class="col-xs-6 col-sm-2"><div class="fate"><img height="128" width="128" src="./images/fates/NewFates_Void2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???"><h4>???</h4></div></div>
-              </div>
-            </div>
+          <div class="text-center center-block">
+            <h3>The Fates</h3>
           </div>
-      </section>
+
+
+          <div class="row">
+            <div class="col-xs-6 col-sm-2 col-sm-offset-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/Fate_Penelope2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Civilization. Robot minions.">
+                <h4>Penelope</h4>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/Fate_Barnacles2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Seas. Hates it when his name is pronounced wrong.">
+                <h4>Barnacles</h4>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/Fate_Hogweed2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of the Forests. Doesn't get along with Penelope.">
+                <h4>Hogweed</h4>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/Fate_Pestur2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Disease. Nothing makes him happy.">
+                <h4>Pestur</h4>
+              </div>
+            </div>
+
+          </div>
+          <div class="row fates-row-2">
+            <div class="col-xs-6 col-sm-2 col-sm-offset-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/Fate_Catlas2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Minerals. Ruler of rocky terrains.">
+                <h4>Catlas</h4>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/Fate_Demo_Sprite2x.png"  data-container="body" data-toggle="popover" data-placement="top" data-content="Fate of Demonstration. Ruler of world demolitions.">
+                <h4>Demo</h4>
+
+              </div>
+
+            </div>
+            <div class="col-xs-6 col-sm-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/NewFates_Snow2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???">
+                <h4>???</h4>
+              </div>
+            </div>
+            <div class="col-xs-6 col-sm-2">
+              <div class="fate">
+                <img class="img-responsive" height="128" width="128" src="./images/fates/NewFates_Tentacle2x.png" data-container="body" data-toggle="popover" data-placement="top" data-content="???">
+                <h4>???</h4>
+              </div>
+            </div>
+
+          </div>
+        </div>
+    </div>
+  </section>
 
 
 
@@ -129,20 +182,24 @@
               </ul>
             </div>
             <div class="col-md-6">
-              <ul><li><p>The powerful <strong>Book of Fate</strong> save system allows you to step through and modify your playthrough!</p></li>
-              </ul></div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <ul>
-                  <li><p><strong>Beautiful motion comics</strong> bring your world, and the terrible powers of The Fates, to life!</p></li>
+              <ul>
+                <li>
+                  <p><strong>Accessibility options</strong> cater to gamers with motor skill, cognitive and vision impairments.</p></li>
                 </ul>
               </div>
+            </div>
+            <div class="row">
               <div class="col-md-6">
                 <ul>
                   <li><p>Handcrafted in-game pixel art, a soundtrack of symphony &amp; steam, Twitter-shareable worlds!</p></li>
                 </ul>
               </div>
+              <div class="col-md-6">
+                <ul>
+                  <li><p>The powerful <strong>Book of Fate</strong> keeps track of your progress and chronicles your adventures!</p></li>
+                </ul>
+              </div>
+
             </div>
           </div>
         </div>
