--- a/app/index.html
+++ b/app/index.html
@@ -31,14 +31,14 @@
               </span>
             </h4>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 hidden-sm">
             <div class="row">
-              <div class="col-md-6"><h4 class="pull-right">Visit us<br>March 2-6 at GDC!</h4></div>
+              <div class="col-md-6"><h4 class="pull-right">As seen at GDC 2015!</h4></div>
               <div class="col-md-6"><img src="./images/campaigns/gdc_megabooth.png" class="img-responsive" alt=""></div>
             </div>
 
           </div>
-          <div class="col-md-4"><h4>Vote for us on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=303692118">Steam Greenlight!</a></h4></div>
+          <div class="col-md-4"><h4>We have been Greenlit on <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=303692118">Steam!</a></h4></div>
 
         </div>
       </div>
@@ -277,8 +277,7 @@
       <!-- build:js scripts/vendor.js -->
       <!-- bower:js -->
       <script src="../bower_components/jquery/dist/jquery.js"></script>
-      <script src="../bower_components/platform/platform.js"></script>
-      <script src="../bower_components/polymer/polymer.js"></script>
+
       <!-- endbower -->
       <!-- endbuild -->
 
@@ -300,14 +299,12 @@
         <script src="../bower_components/bootstrap/js/alert.js"></script>
         <script src="../bower_components/bootstrap/js/dropdown.js"></script>
         <script src="../bower_components/bootstrap/js/tooltip.js"></script>
-        <script src="../bower_components/bootstrap/js/modal.js"></script>
         <script src="../bower_components/bootstrap/js/transition.js"></script>
         <script src="../bower_components/bootstrap/js/button.js"></script>
         <script src="../bower_components/bootstrap/js/popover.js"></script>
         <script src="../bower_components/bootstrap/js/carousel.js"></script>
         <script src="../bower_components/bootstrap/js/scrollspy.js"></script>
         <script src="../bower_components/bootstrap/js/collapse.js"></script>
-        <script src="../bower_components/bootstrap/js/tab.js"></script>
         <!-- endbuild -->
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/main.js"></script>
